--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             <a href="https://www.credly.com/users/xinchenzhou" target="_blank">
                 <img src="images/icons8-credly-80.png" alt="Credly" />
             </a>
+            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" target="_blank">
+                <img src="images/tiktok-icon.png" alt="TikTok?" />
+            </a>
         </div>
     </section>
 
